# nix-9p

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: fs.rs  main.rs  utils.rs
