[package]
name = "nix-9p"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-9p = {path = "rust-9p"}

nix = "^0"
env_logger = "^0"
filetime = "^0"
tokio = { version = "^1.0", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["fs"] }
async-trait = "^0.1"
futures = "^0.3"

[profile.release]
opt-level = 3
lto = true